# xdg-desktop-portal-hyprland

./: meson.build
nix/: default.nix
protocols/: meson.build
src/: meson.build
